--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clsx": "^1.1.1",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.0",
