--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "intern-react-app",
   "version": "0.1.0",
-  "homepage": "https://acong97.github.io/airbnb",
+  "homepage": "",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
@@ -14,6 +14,7 @@
     "react-date-range": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "sass": "^1.49.9",
     "web-vitals": "^2.1.4"
