add router and finish host page

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "intern-react-app",
   "version": "0.1.0",
-  "homepage": "",
+  "homepage": "https://acong97.github.io/",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^1.0.6",
